# designing-touch

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  start.command
docs/: README.md  autonomy-pattern.md
dtouch/: __init__.py  audio.py  camera.py  field.py  fluid.py  glow.py  gui.py  live.py  matte.py  overlay_ui.py  particles.py  pipeline.py  presets.py  render.py  shadow.py
dtouch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
experiments/: README.md
experiments/01-displacement/: README.md  run.py
experiments/01-displacement/ops/: sources.py
experiments/01-displacement/tests/: test_field.py  test_pipeline.py
experiments/02-shadows/: README.md  run.py
experiments/03-audio-reactive/: README.md  run.py
experiments/04-fluid/: README.md  run.py
experiments/05-live-webcam/: README.md  run.py
experiments/06-flocking/: README.md  run.py
tests/: test_audio.py  test_field.py  test_fluid.py  test_glow.py  test_graph.py  test_matte.py  test_overlay_scale.py  test_overlay_scroll.py  test_particles.py  test_preset_manage.py  test_presets.py  test_render.py  test_video_bg.py
