[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dtouch"
version = "0.1.0"
description = "Modular, CLI/agent-drivable engine for TouchDesigner-style video/audio effects"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "moderngl>=5.12",
    "Pillow>=10.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
audio = ["sounddevice>=0.4"]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["dtouch"]
