[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dtouch"
version = "0.1.0"
description = "Modular, code-first engine for turning video and sound into flowing particle visuals"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "moderngl>=5.12",
    "Pillow>=10.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "pyobjc-framework-AVFoundation>=10.0; sys_platform == 'darwin'",  # camera selection by name
]

[project.optional-dependencies]
audio = ["sounddevice>=0.4"]
person = ["mediapipe>=0.10"]   # person matte (selfie segmentation); not needed for the default
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["dtouch"]
